--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     type="text/css"
     href="https://bazigar.in/assets/css/home.css"
   />
-  <link rel="stylesheet" href="path/to/owl.carousel.min.css" />
-  <link rel="stylesheet" href="path/to/owl.theme.default.min.css" />
-  <script src="path/to/jquery.min.js"></script>
-  <script src="path/to/owl.carousel.min.js"></script>
+  <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
+<link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
+<script src="jquery.min.js"></script>
+<script src="owlcarousel/owl.carousel.min.js"></script>
   <link
     rel="stylesheet"
     type="text/css"
