--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="/node_modules/owl.carousel/dist/assets/owl.carousel.min.css" />
     <meta charset="UTF-8" />
     <link
       rel="icon"
@@ -12,6 +13,8 @@
   </head>
   <body style="background-color: #000">
     <div id="root"></div>
+    <script src="/node_modules/jquery/dist/jquery.js"></script>
+    <script src="/node_modules/owl.carousel/dist/owl.carousel.min.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
   <link
